# svnts

./: .gitignore  README.md  SvnTimestamp.sln  install.bat  pyproject.toml  svnts.py  uninstall.bat
scripts/: install.bat  uninstall.bat
scripts/hooks/: post-update-restore.bat  pre-commit-save.bat
scripts/registry/: install-context-menu.bat  uninstall-context-menu.bat
src/SvnTimestamp.CLI/: Program.cs  SvnTimestamp.CLI.csproj
src/SvnTimestamp.Core/: Constants.cs  Exceptions.cs  FileTimeHelper.cs  SvnPropertyHelper.cs  SvnTimestamp.Core.csproj  SvnWorkingCopyHelper.cs  TimestampManager.cs  TimestampResult.cs
svnts/: __init__.py  _install.py  cli.py  file_time.py  manager.py  svn_helper.py  working_copy.py
svnts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_file_time.py  test_manager.py  test_working_copy.py
tests/SvnTimestamp.Core.Tests/: FileTimeHelperTests.cs  SvnTimestamp.Core.Tests.csproj  SvnWorkingCopyHelperTests.cs
